# fastapi-svelte-echarts-dashboard

./: .dockerignore  .gitignore  Dockerfile  README.md  data.json  docker-compose.yml
backend/: main.py  pyproject.toml  requirements.txt
backend/api/: dependencies.py
backend/api/routers/: health_router.py  visualization_router.py
backend/application/services/: visualization_service.py
backend/core/: config.py  exceptions.py
backend/domain/models/: visualization.py
backend/domain/ports/: visualization.py
backend/infrastructure/repositories/: visualization_repository.py
backend/tests/api/routers/: test_visualization_router.py
backend/tests/application/services/: test_visualization_service.py
backend/tests/infrastructure/repositories/: test_visualization_repository.py
frontend/: package-lock.json  package.json  svelte.config.js
frontend/src/lib/api/: api.test.ts  api.ts
frontend/src/lib/components/: BarChart.svelte  Loading.svelte  PieChart.svelte
frontend/src/lib/services/: dataTransformer.test.ts  dataTransformer.ts
frontend/src/lib/types/: types.ts
frontend/src/routes/: +page.svelte
